feat: adiciona dados de exemplo e corrige conexão do frontend com backend local
- Adiciona script SQL (seed_example_data.sql) para inserir dados de teste
- Adiciona script TypeScript (seedExampleData.ts) para inserir dados programaticamente
- Adiciona documentação (SEED_DATA.md) explicando como usar os scripts
- Adiciona script npm 'seed' no package.json do backend
- Corrige API_BASE_URL para usar localhost:3001 em desenvolvimento
- Scripts criam ~68 leads de exemplo com diferentes SDRs, stages e tempos de SLA

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "dev": "tsx watch src/app.ts",
     "build": "npm install --include=dev && tsc",
     "start": "node dist/app.js",
-    "lint": "eslint src/**/*.ts"
+    "lint": "eslint src/**/*.ts",
+    "seed": "tsx src/scripts/seedExampleData.ts"
   },
   "keywords": ["sla", "sdr", "pipedrive", "supabase", "dashboard"],
   "author": "",
